# update06

.claude-plugin/: marketplace.json
plugins/update/: BETA_MARKER.txt  TAG_PIN_MARKER.txt  known_marketplaces.json  pyproject.toml  update_engine.py
plugins/update/.claude-plugin/: plugin.json
plugins/update/hooks/: hooks.json
plugins/update/hooks/sessionstart/: session-bootstrap.sh
plugins/update/hooks/stop/: bootstrap-display.sh
plugins/update/hooks/userpromptsubmit/: bootstrap-display.sh
